[package]
name = "dnd-greenroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.3", features = ["default", "headers", "ws"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace", "auth"] }
tower = "0.4.11"
rust-s3 = "0.28.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
async-trait = "0.1.52"
anyhow = "1.0.52"
image = "0.23.14"
mime = "0.3.16"